# libapparmor-dev

./: .bzrignore  .gitignore  .gitlab-ci.yml  .image-garden.mk  CONTRIBUTING.md  Makefile  Makefile.am  README  README.md  configure.ac  run-spread.sh  spread.yaml
.github/workflows/: main.yml
binutils/: Makefile  aa-enabled.pod  aa_exec.c  aa_load.c  aa_status.c
changehat/mod_apparmor/: Makefile  mod_apparmor.c
changehat/pam_apparmor/: Makefile  pam_apparmor.c
common/: Make.rules  Version
kernel-patches/: README
kernel-patches/2.6.24/: apparmor-bootdisable.diff  apparmor-builtin-only.diff  apparmor-fix-sysctl-refcount.diff  file-handle-ops.diff  remove_suid.diff  security-create.diff  security-setxattr.diff  (+13 more)
parser/: Makefile  af_rule.cc  af_rule.h  af_unix.cc  af_unix.h  apparmor.d.pod  apparmor.pod  apparmor_parser.pod  capability.h  dbus.cc  dbus.h  immunix.h  io_uring.cc  io_uring.h  lib.h  module.cc  module.h  mount.cc  mount.h  mqueue.cc  mqueue.h  network.c  network.cc  network.h  parser.h  parser_alias.c  parser_common.c  parser_include.c  parser_interface.c  parser_lex.l  parser_lex.ll  parser_main.c  parser_misc.c  parser_misc.cc  parser_policy.c  parser_policy.cc  parser_regex.c  parser_variable.c  parser_yacc.y  policy_cache.c  (+10 more)
profiles/: Makefile
utils/: Makefile  Reports.pm  SubDomain.pm  aa-decode  aa-exec.pod  aa-genprof  aa-mergeprof  aa-notify  aa-notify.pod  aa-remove-unknown  aa-show-usage  aa-show-usage.pod  aa-status  aa-status.pod  aa-unconfined  aa-unconfined.pod  apparmor_status.pod  genprof  genprof.pod  logprof.conf  notify.conf
(+858 files in other folders)
